# BIP39-Mnemonic

./: CMakeLists.txt
include/bip39/: bip39_passphrase.h  bip39_wallet.h
src/: bip39_passphrase.cpp  bip39_wallet.cpp
